samples/_failures_safe/1761241591_83971b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e306d95.c: In function ‘main’:
./samples/SAFE/__tmp_6e306d95.c:146:19: error: ‘trans’ undeclared (first use in this function)
  146 |     print_matrix(&trans
      |                   ^~~~~
./samples/SAFE/__tmp_6e306d95.c:146:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6e306d95.c:146:24: error: expected ‘)’ at end of input
  146 |     print_matrix(&trans
      |                 ~      ^
      |                        )
./samples/SAFE/__tmp_6e306d95.c:146:5: error: expected declaration or statement at end of input
  146 |     print_matrix(&trans
      |     ^~~~~~~~~~~~
